--- a/week3.html
+++ b/week3.html
@@ -8,57 +8,57 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Mason</td>         <td></td><td align=right>35</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>175</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>70</td></tr>
+<tr><td>Karty</td>         <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>385</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>215</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>140</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>40</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>5</td></tr>
+<tr><td>Nix</td>           <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>475</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Charbonnet</td>    <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>290</td></tr>
+<tr><td>Charbonnet</td>    <td></td><td align=right>195</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>100</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>30</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Nabers</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>5</td></tr>
+<tr><td>Nabers</td>        <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>755</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>275</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>50</td></tr>
+<tr><td>NCollins</td>      <td></td><td align=right>40</td></tr>
 <tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>130</td></tr>
+<tr><td>Daniels</td>       <td></td><td align=right>185</td></tr>
+<tr><td></td>              <td></td><td align=right>755</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>75</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>215</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Rice</td>          <td></td><td align=right>130</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>140</td></tr>
+<tr><td>CWilliams</td>     <td></td><td align=right>140</td></tr>
+<tr><td></td>              <td></td><td align=right>750</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>255</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>50</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>35</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Moody</td>         <td></td><td align=right>35</td></tr>
+<tr><td>MHarrison</td>     <td></td><td align=right>105</td></tr>
+<tr><td></td>              <td></td><td align=right>480</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Hubbard</td>       <td></td><td align=right>155</td></tr>
 <tr><td>Allgeier</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Olave</td>         <td></td><td align=right>115</td></tr>
+<tr><td>Shakir</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Kmet</td>          <td></td><td align=right>120</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>20</td></tr>
+<tr><td>Odunze</td>        <td></td><td align=right>105</td></tr>
+<tr><td></td>              <td></td><td align=right>775</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (8)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>80</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>85</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>115</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>90</td></tr>
 <tr><td>Benson</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>445</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>100</td></tr>
+<tr><td>Hall</td>          <td></td><td align=right>75</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>280</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Reichard</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>65</td></tr>
+<tr><td>Reichard</td>      <td></td><td align=right>110</td></tr>
+<tr><td></td>              <td></td><td align=right>630</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mayfield</td>      <td></td><td align=right>25</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>330</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>255</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Narveson</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>45</td></tr>
+<tr><td>Kincaid</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>5</td></tr>
+<tr><td>Narveson</td>      <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>835</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,45 +166,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1685</font></td>
+    <td><font size=2>1495</font></td>
+    <td><font size=2>750</font></td>
+    <td><font size=2>445</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1210</font></td>
-    <td><font size=2>855</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1595</font></td>
+    <td><font size=2>1330</font></td>
     <td><font size=2>640</font></td>
-    <td><font size=2>570</font></td>
+    <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1225</font></td>
-    <td><font size=2>925</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1980</font></td>
+    <td><font size=2>1680</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1010</font></td>
-    <td><font size=2>885</font></td>
-    <td><font size=2>600</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1640</font></td>
+    <td><font size=2>1720</font></td>
+    <td><font size=2>630</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1005</font></td>
-    <td><font size=2>1155</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1485</font></td>
+    <td><font size=2>1905</font></td>
     <td><font size=2>505</font></td>
-    <td><font size=2>500</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>935</font></td>
-    <td><font size=2>1015</font></td>
-    <td><font size=2>490</font></td>
-    <td><font size=2>445</font></td>
+    <td><font size=2>480</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -215,43 +215,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1695</font></td>
-    <td><font size=2>1210</font></td>
+    <td><font size=2>2450</font></td>
+    <td><font size=2>1965</font></td>
     <td><font size=2>895</font></td>
-    <td><font size=2>800</font></td>
+    <td><font size=2>755</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(10)</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1665</font></td>
-    <td><font size=2>1365</font></td>
+    <td><font size=2>2500</font></td>
+    <td><font size=2>1995</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>420</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1410</font></td>
-    <td><font size=2>1315</font></td>
-    <td><font size=2>705</font></td>
-    <td><font size=2>705</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>0</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>975</font></td>
-    <td><font size=2>1845</font></td>
-    <td><font size=2>660</font></td>
-    <td><font size=2>315</font></td>
+    <td><font size=2>1855</font></td>
+    <td><font size=2>2090</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>445</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>790</font></td>
-    <td><font size=2>1350</font></td>
-    <td><font size=2>435</font></td>
+    <td><font size=2>1565</font></td>
+    <td><font size=2>1795</font></td>
+    <td><font size=2>775</font></td>
     <td><font size=2>355</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(4)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1450</font></td>
+    <td><font size=2>2230</font></td>
+    <td><font size=2>660</font></td>
+    <td><font size=2>315</font></td>
     <td><font size=2>0</font></td>
 </table>
